// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<button
  className="root medium"
  disabled={false}
  onClick={[Function]}
/>
`;

exports[`Button should render children 1`] = `
<button
  className="root medium"
  disabled={false}
  onClick={[Function]}
>
  Button Text
</button>
`;

exports[`Button should render disabled 1`] = `
<button
  className="root medium"
  disabled={true}
  onClick={[Function]}
/>
`;
